<resources>
    <string name="app_name">MakanMoerahAndroid</string>
    <string name="home_bottom_menu_label">Home</string>
    <string name="explore_bottom_menu_label">Explore</string>
    <string name="booking_bottom_menu_label">Booking</string>
    <string name="reservation_bottom_menu_label">Reservation</string>
    <string name="account_bottom_menu_label">Account</string>

    <!-- Restaurant Card -->
    <string name="restaurant_card_image_content_description">Restaurant Image</string>

    <!-- Explore Fragment -->
    <string name="explore_fragment_restaurant_list_no_restaurant_found_header_text">No Restaurant Found</string>
    <string name="explore_fragment_bottom_sheet_filter_options_menu_title">Filter</string>
    <string name="explore_fragment_bottom_sheet_filter_sort_header_text">Sort</string>
    <string name="explore_fragment_bottom_sheet_filter_sort_button_cheapest_text">Cheapest</string>
    <string name="explore_fragment_bottom_sheet_filter_sort_button_most_rating_text">Most Rating</string>
    <string name="explore_fragment_bottom_sheet_filter_sort_button_a_to_z_text">A-Z</string>
    <string name="explore_fragment_bottom_sheet_filter_sort_button_most_discount_text">Most Discount</string>
    <string name="explore_fragment_bottom_sheet_filter_sort_button_nearest_text">Nearest</string>
    <string name="explore_fragment_bottom_sheet_filter_num_of_people_header_text">Number Of People</string>
    <string name="explore_fragment_bottom_sheet_filter_num_of_people_dropdown_hint">Number Of People</string>
    <string name="explore_fragment_bottom_sheet_filter_time_header_text">Time</string>
    <string name="explore_fragment_bottom_sheet_filter_date_header_text">Date</string>
    <string name="explore_fragment_bottom_sheet_filter_city_header_text">City</string>
    <string name="explore_fragment_bottom_sheet_filter_district_header_text">District</string>
    <string name="explore_fragment_bottom_sheet_filter_district_no_district_filter_available_header_text">No District Available</string>
    <string name="explore_fragment_bottom_sheet_filter_food_category_header_text">Food Category</string>
    <string name="explore_fragment_bottom_sheet_filter_food_category_no_food_category_filter_available_header_text">No Food Category Available</string>
    <string name="explore_fragment_bottom_sheet_filter_price_header_text">Price</string>
    <string name="explore_fragment_bottom_sheet_filter_price_slider_content_description">Price Slider</string>
    <string name="explore_fragment_bottom_sheet_filter_discount_header_text">Discount</string>
    <string name="explore_fragment_bottom_sheet_filter_discount_slider_content_description">Discount Slider</string>
    <string name="explore_fragment_bottom_sheet_filter_rating_header_text">Rating</string>
    <string name="explore_fragment_bottom_sheet_filter_rating_slider_content_description">Rating Slider</string>
    <string name="explore_fragment_bottom_sheet_filter_apply_filter_button_text">Apply Filter</string>

    <!-- Login Fragment -->
    <string name="login_fragment_login_header_text">Log in</string>
    <string name="login_fragment_email_input_text_hint">Email</string>
    <string name="login_fragment_empty_email_error_message">Required</string>
    <string name="login_fragment_invalid_email_error_message">Invalid Email Format</string>
    <string name="login_fragment_password_input_text_hint">Password</string>
    <string name="login_fragment_empty_password_error_message">Required</string>
    <string name="login_fragment_login_button_text">Login</string>
    <string name="login_fragment_facebook_login_button_text">Login with Facebook</string>
    <string name="login_fragment_google_login_button_text">Login with Google</string>
    <string name="login_fragment_login_failure_invalid_credentials_error_message">Invalid Credentials</string>
    <string name="login_fragment_login_failure_failed_recaptcha_error_message">Invalid Recaptcha, Please try login again</string>
    <string name="login_fragment_login_failure_empty_recaptcha_response_error_message">Empty Recaptcha Response, Please try login again</string>

    <!-- Booking Fragment -->
    <string name="booking_fragment_booking_category_ongoing_toggle_button_text">Ongoing</string>
    <string name="booking_fragment_booking_category_cancelled_toggle_button_text">Cancelled</string>
    <string name="booking_fragment_booking_category_completed_toggle_button_text">Completed</string>
    <string name="booking_fragment_booking_list_no_booking_available_header_text">No Booking(s) Yet</string>
    <string name="booking_fragment_booking_list_restaurant_card_image_content_description">Restaurant Image</string>

    <!-- Reservation Fragment -->
    <string name="reservation_fragment_booking_category_ongoing_toggle_button_text">Ongoing</string>
    <string name="reservation_fragment_booking_category_cancelled_toggle_button_text">Cancelled</string>
    <string name="reservation_fragment_booking_category_completed_toggle_button_text">Completed</string>
    <string name="reservation_fragment_date_picker_header_text">Date</string>
    <string name="reservation_fragment_reservation_list_no_reservation_available_header_text">No Reservation(s) Yet</string>

    <!-- Account Fragment -->
    <string name="account_fragment_logout_failure_general_exception_error_message">Logout Fails, Please try again</string>
    <string name="account_fragment_relogin_failure_general_exception_error_message">Relogin Fails, Please check your internet connection</string>

    <!-- Restaurant Details Fragment -->
    <string name="restaurant_details_fragment_facility_header_text">Facilities</string>
    <string name="restaurant_details_fragment_payment_mode_header_text">Payment Modes</string>
    <string name="restaurant_details_fragment_opening_hour_table_phone_header_text">Phone</string>
    <string name="restaurant_details_fragment_opening_hour_table_opening_hour_header_text">Opening Hour</string>
    <string name="restaurant_details_fragment_opening_hour_table_closing_hour_header_text">Closing Hour</string>
    <string name="restaurant_details_fragment_discount_table_before_header_text">Before</string>
    <string name="restaurant_details_fragment_discount_table_after_header_text">After</string>
    <string name="restaurant_details_fragment_discount_table_discount_selection_dropdown_hint">Discount Selection</string>
    <string name="restaurant_details_fragment_reviews_header_text">Reviews</string>
    <string name="restaurant_details_fragment_number_of_reviews_text">review(s)</string>
    <string name="restaurant_details_fragment_review_card_user_avatar_image_content_description">User Image</string>
    <string name="restaurant_details_fragment_invalid_restaurant_header_text">Invalid Restaurant</string>

</resources>