<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.account.AccountFragment">

    <data>

        <variable
            name="loginViewModel"
            type="com.felixstanley.makanmoerahandroid.fragment.account.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_fragment_login_header_text"
            android:textSize="26sp"
            android:textStyle="bold" />

        <!-- Login Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_fragment_email_input_text_hint"
            app:boxStrokeColor="@color/lightBlue"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:hintTextColor="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_fragment_password_input_text_hint"
            app:boxStrokeColor="@color/lightBlue"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/lightBlue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> loginViewModel.onLoginButtonClicked()}"
            android:text="@string/login_fragment_login_button_text"
            android:textColor="@color/primaryColor"
            android:textSize="17sp"
            app:backgroundTint="@color/lightBlue" />

        <!-- OAuth2 Login Button -->

        <!-- Facebook Login Button -->
        <Button
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> loginViewModel.onFacebookOAuth2LoginButtonClicked()}"
            android:text="@string/login_fragment_facebook_login_button_text"
            android:textColor="@color/primaryColor"
            android:textSize="17sp"
            app:backgroundTint="@color/lightBlue"
            app:iconSize="24dp" />

        <!-- Google Login Button -->
        <Button
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:onClick="@{() -> loginViewModel.onGoogleOAuth2LoginButtonClicked()}"
            android:text="@string/login_fragment_google_login_button_text"
            android:textColor="@color/primaryColor"
            android:textSize="17sp"
            app:backgroundTint="@color/lightBlue" />

    </LinearLayout>

</layout>