<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.BookingFragment">

    <data>

        <variable
            name="bookingViewModel"
            type="com.felixstanley.makanmoerahandroid.fragment.booking.BookingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Booking Category Toggle Button -->
        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/booking_category_toggle_button_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/booking_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/booking_category_ongoing_toggle_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_fragment_booking_category_ongoing_toggle_button_text" />

            <Button
                android:id="@+id/booking_category_cancelled_toggle_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_fragment_booking_category_cancelled_toggle_button_text" />

            <Button
                android:id="@+id/booking_category_completed_toggle_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/booking_fragment_booking_category_completed_toggle_button_text" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <!-- Booking List Item Recycler View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/booking_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>